Simplify Build * Base build on sbt-project * Consolidate build code to HSPBuild.scala * Use defaults provided by sbt-project * Add the version.sbt file that sbt-project requires. * Move files to correct paths for sbt-project.